# stm32n6_nucleo_board

./: .gitignore  CLAUDE.md
apps/camera-app/: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf
apps/camera-app/src/: app_usbd.c  app_usbd.h  frame_stats.c  frame_stats.h  main.c
docs/: HANDOVER.md  N6-FACTS.md  TODO.md  architecture.md  camera-bringup-debug-log.md  pose-bringup-checklist.md
overlays/: debug-logging.conf  defer_imx335.overlay  fastlog-repro.conf  nucleo_n657x0_q_axisram_noflex.overlay  nucleo_n657x0_q_bigram.overlay  nucleo_n657x0_q_vidpool.overlay
patches/: imx335-cold-boot-init.patch
scripts/: cam-describe.sh  cam-stream.sh  host-setup.sh  preflight-flash.sh  swd-run.sh  test-preflight.sh
